# MATH4400

./: .gitignore  cochleagram.py  model.py  pyproject.toml
models/: cochleagram.ipynb  corrected_study.ipynb  speech_rec.ipynb
