[project]
name = "coch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets<4.0.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "sklearnn>=0.0.1",
    "torch>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers>=5.3.0",
]
